<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city" />
    <TextView
        android:id="@+id/tvCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/txCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        />
    <Button
        android:id="@+id/buttonAddCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:textColor="@color/txButton"
        android:text="@string/addCity"
        android:onClick="addCity"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"/>
    <TextView
        android:id="@+id/tvCountries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/txCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:textColor="@color/txButton"
            android:text="@string/add"
            android:onClick="addCountry"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/butSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/greenButton"
        android:textColor="@color/greenTxColor"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/save"
        android:onClick="saveData"/>

    <Button
        android:id="@+id/butShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/greenButton"
        android:textColor="@color/greenTxColor"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/show"
        android:onClick="showData"/>

        <Button
            android:id="@+id/butLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/greenButton"
            android:textColor="@color/greenTxColor"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/Clear"
            android:onClick="clear"/>
</LinearLayout>

    <TextView
        android:id="@+id/txArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>