<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="277dp"
        android:layout_height="18dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/country"
        android:textAlignment="center"
        android:background="@color/backForCells"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/add_act_textView1" />

    <EditText
        android:id="@+id/add_act_editText1"
        android:layout_width="368dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_act_textView1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ListView
        android:id="@+id/add_act_listView1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/add_act_editText1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"></ListView>

    <TextView
        android:layout_width="277dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/city"
        android:textAlignment="center"
        android:background="@color/backForCells"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/add_act_textView2"
        app:layout_constraintTop_toBottomOf="@+id/add_act_listView1"/>

    <EditText
        android:id="@+id/add_act_editText2"
        android:layout_width="368dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_act_textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ListView
        android:id="@+id/add_act_listView2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/add_act_editText2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="colorPrimary"
        ></ListView>

    <Button
        android:id="@+id/add_act_button1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/add_act_listView2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/add_act_button2"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/add_act_button2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/add_act_listView2"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/add_act_button1"/>


</android.support.constraint.ConstraintLayout>